Update requests to all controllers
